--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "gulp-preprocess": "^1.2.0",
+    "gulp-replace-task": "^0.11.0",
+    "gulp-util": "^3.0.7",
+    "shelljs": "^0.3.0",
+    "yargs": "^3.30.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
