--- a/ionic.project
+++ b/ionic.project
@@ -1,5 +1,13 @@
 {
   "name": "bhook",
   "app_id": "",
-  "defaultBrowser": "chrome"
+  "defaultBrowser": "chrome",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
