--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-inject": "^3.0.0",
     "gulp-preprocess": "^1.2.0",
     "gulp-replace-task": "^0.11.0",
     "gulp-util": "^3.0.7",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
     "shelljs": "^0.3.0",
     "yargs": "^3.30.0"
   },
