--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.1",
-    "angular-mocks": "1.4.3"
+    "angular-mocks": "1.4.3",
+    "ngCordova": "~0.1.24-alpha"
   }
 }
