--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-copy" : "^0.0.2",
+    "pouchdb-load" : "*",
+    "pouchdb" : "*",
+    "pouchdb-replication-stream" : "*",
+    "angular-translate" : "*"
   },
   "devDependencies": {
     "bower": "^1.3.3",
